SQuirreL SQL Client Change Log
==============================

Not yet released - available in the latest snapshot, or at least checked into CVS.
=========

    New Features/Enhancements:

DBCopy Plugin: Added support for Informix and HADB

1602255: 'Interpret DATE columns as TIMESTAMP' also in SQL view.  When this 
configuration item is checked, any SQL query result that contains a DATE column
will show the DATE values as TIMESTAMP values (This is useful with Oracle where
DATE columns also contain TIME components)

Informix Plugin: This new plugin allows the user view source for stored 
procedure, trigger and view objects. Also provides Informix-specific details 
for indexes and triggers.  Special thanks goes to Doug Lawry for help setting 
up an Informix instance for developing the plugin, and providing the system 
catalog queries necessary for the object information provided by this plugin.

Made SQuirreL work with hxtt drivers. See www.hxtt.com. Thanks to Yonghong Zhao 
the patches.

Oracle Plugin:
   Windows for
    - DB Output, 
    - Session Info,
    - SGA Trace,
    - Invalid Objects
   were changed in the following ways:
   - Tool bar buttons are not in the main frame tool bar any more but in the 
     Session tool bar.
   - Each window has its own tool bar icon.
   - All windows restore their last size and position.
   - All windows provide a "Stay on top" check box.

SQuirreL paths (-home, -user) are shown in Global Preferences

LAF Plugin: Added Napkin Look and Feel (JDK 1.5 only)

Completion Popup (Code Completion ctrl+space, Tools Popup ctrl+t, Bookmarks Popup ctrl+j):
When the beginning/end of the pop up list is reached another arrow up/down jumps to the last/first entry. 

1015274 -  DB2/400 system naming support

Schema refresh on catalog combo box change:
Schemas are refreshed automatically, when the user switches to another catalog.
On systems that support Catalogs like Sybase or MSSQL, Schemas within a Catalog only